--- a/app/interactive_bot/webapp/view/App.view.xml
+++ b/app/interactive_bot/webapp/view/App.view.xml
@@ -2,6 +2,7 @@
     displayBlock="true"
     xmlns:mvc="sap.ui.core.mvc"
     xmlns="sap.m">
-    <App id="app">
+    <App id="app" width="100%" height="100%">
+
     </App>
 </mvc:View>
